WorkspaceItem inner scroll fix
Use `overflow: clip` to fix a problem where workspace items without docs
would have a tiny scrollbar.

This is a bit of a hack in that its not fully understood why that
scrollbar appears, but overflow: clip seems to fix it...

--- a/src/css/code/workspace-item.css
+++ b/src/css/code/workspace-item.css
@@ -34,7 +34,7 @@
   /* gutter */
   box-shadow: inset 2rem 0 0 var(--color-workspace-item-gutter);
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
 
   --c-width_workspace-item_inner-content: min(
     var(--readable-column-width),
